Build SimpleX HEALPix as C++98, not C++11. Fixes #974.

--- a/src/amuse/community/simplex/src/plugins/HEALPix/src/Makefile
+++ b/src/amuse/community/simplex/src/plugins/HEALPix/src/Makefile
@@ -1,5 +1,7 @@
 MPICXX ?= mpicxx
 
+CXXCFLAGS += -std=c++98
+
 SPHERE_HEADERS= alm.h alm_fitsio.h \
 	alm_powspec_tools.h powspec.h \
 	powspec_fitsio.h \
